[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "forest-panoptic-nav"
version = "0.1.0"
description = "Panoptic segmentation in forest environments for autonomous navigation using the FinnWoodlands dataset"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "click>=8.0",
    "matplotlib>=3.5",
    "numpy>=1.22",
    "open3d>=0.17",
    "opencv-python>=4.5",
    "scikit-learn>=1.0",
    "torch>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
]

[project.scripts]
forest-panoptic-nav = "forest_panoptic_nav.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]
